--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.8.0",
-    "@strapi/plugin-users-permissions": "5.8.0",
+    "@strapi/plugin-users-permissions": "^5.8.0",
+    "@strapi/provider-upload-aws-s3": "^5.12.3",
     "@strapi/strapi": "5.8.0",
     "pg": "^8.8.0",
     "react": "^18.0.0",
